style: fix section bottom margin on mobile

--- a/src/components/Section/style.scss
+++ b/src/components/Section/style.scss
@@ -8,6 +8,10 @@
     padding-bottom: 5px;
     margin-bottom: 10px;
   }
+
+  @include media(">small", "<=medium") {
+    margin-bottom: 15px;
+  }
 }
 
 .section-units {
